--- a/index.html
+++ b/index.html
@@ -17,18 +17,74 @@
       <a class="navbar-brand" href="#"><img src="img/chef.png" width="30" height="30" class="d-inline-block align-top" alt="">Foodies</a>
       <div class="collapse navbar-collapse justify-content-end " id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="#">Breakfast</a>
-          <a class="nav-item nav-link" href="#">Lunch</a>
-          <a class="nav-item nav-link" href="#">Dinner</a>
-          <a class="nav-item nav-link" href="#">Cafés</a>
-          <a class="nav-item nav-link" href="#">Afternoon Tea</a>
+          <a class="nav-item nav-link" href="#">Petits déjeuner</a>
+          <a class="nav-item nav-link" href="#">Déjeuner</a>
+          <a class="nav-item nav-link" href="#">Dîner</a>
+          <a class="nav-item nav-link" href="#">Boire un café</a>
+          <a class="nav-item nav-link" href="#">Une tasse de thé</a>
           <a class="nav-item nav-link" href="#">More</a>
         </div>
       </div>
-      <button type="button" class="btn btn-link">Login</button>
-      <button type="button" class="btn btn-light">Join Us</button>
+      <button type="button" class="btn btn-link">Connectez-vous</button>
+      <button type="button" class="btn btn-light">Rejoignez nous</button>
     </div>
   </nav>
+  <header>
+    <div class="bd-example">
+      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/flore.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Cafés</h5>
+              <p>Les cafés mythiques...</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/restaurant-bateau-mouche.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Restaurants</h5>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/home-situation.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Hôtels</h5>
+              <p>Sous les toits de Paris ! </p>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+  </header>
+  <section>
+    <aside class="search">
+      <form class="form-inline">
+        <label class="sr-only" for="inlineFormInputName2">Name</label>
+        <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Jane Doe">
+        <label class="sr-only" for="inlineFormInputGroupUsername2">Username</label>
+        <div class="input-group mb-2 mr-sm-2">
+          <input type="text" class="form-control" id="inlineFormInputGroupUsername2" placeholder="Username">
+        </div>
+        <button type="submit" class="btn btn-primary mb-2">Trouver</button>
+      </form>
+
+    </aside>
+  </section>
 
 
 
