--- a/index.html
+++ b/index.html
@@ -12,24 +12,29 @@
 
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="#"><img src="img/chef.png" width="30" height="30" class="d-inline-block align-top" alt="">Foodies</a>
-      <div class="collapse navbar-collapse justify-content-end " id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link" href="#">Petits déjeuner</a>
-          <a class="nav-item nav-link" href="#">Déjeuner</a>
-          <a class="nav-item nav-link" href="#">Dîner</a>
-          <a class="nav-item nav-link" href="#">Boire un café</a>
-          <a class="nav-item nav-link" href="#">Une tasse de thé</a>
-          <a class="nav-item nav-link" href="#">More</a>
-        </div>
-      </div>
-      <button type="button" class="btn btn-link">Connectez-vous</button>
-      <button type="button" class="btn btn-light">Rejoignez nous</button>
-    </div>
-  </nav>
+
+
   <header>
+    <!-- Barre de navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#"><img src="img/chef.png" width="30" height="30" class="d-inline-block align-top" alt="">Foodies</a>
+        <div class="collapse navbar-collapse justify-content-end " id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link" href="#">Petits déjeuner</a>
+            <a class="nav-item nav-link" href="#">Déjeuner</a>
+            <a class="nav-item nav-link" href="#">Dîner</a>
+            <a class="nav-item nav-link" href="#">Boire un café</a>
+            <a class="nav-item nav-link" href="#">Une tasse de thé</a>
+            <a class="nav-item nav-link" href="#">More</a>
+          </div>
+        </div>
+        <button type="button" class="btn btn-link">Connectez-vous</button>
+        <button type="button" class="btn btn-light">Rejoignez nous</button>
+      </div>
+    </nav>
+
+    <!-- Slider -->
     <div class="bd-example">
       <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -70,9 +75,9 @@
         </a>
       </div>
     </div>
-  </header>
-  <section>
-    <aside class="search">
+
+    <!-- bandeau contenant la barre de recherche -->
+    <div class="search">
       <form class="form-inline">
         <label class="sr-only" for="inlineFormInputName2">Name</label>
         <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Jane Doe">
@@ -82,9 +87,59 @@
         </div>
         <button type="submit" class="btn btn-primary mb-2">Trouver</button>
       </form>
+    </div>
+  </header>
 
-    </aside>
+  <section>
+    <div class="card-deck">
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+      <div class="card">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">Last updated 3 mins ago</small>
+        </div>
+      </div>
+    </div>
   </section>
+
+  <footer>
+    <div class="website">
+      <h5>About website</h5>
+
+    </div>
+    <div class="foodies">
+      <h5>For foodies</h5>
+
+    </div>
+    <div class="restaurant">
+      <h5>For restaurants</h5>
+
+    </div>
+
+  </footer>
 
 
 
