--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
       </div>
     </div>
 
+
     <!-- bandeau contenant la barre de recherche -->
-    <div class="search">
+    <div class="search container">
       <form class="form-inline">
         <label class="sr-only" for="inlineFormInputName2">Name</label>
         <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Jane Doe">
@@ -89,8 +90,7 @@
       </form>
     </div>
   </header>
-
-  <section>
+<section class="container">
     <div class="card-deck">
       <div class="card">
         <img src="..." class="card-img-top" alt="...">
@@ -125,7 +125,8 @@
     </div>
   </section>
 
-  <footer>
+
+  <footer class="container">
     <div class="website">
       <h5>About website</h5>
 
