Ajout du corps du site et du footer.

--- a/index.html
+++ b/index.html
@@ -75,8 +75,6 @@
         </a>
       </div>
     </div>
-
-
     <!-- bandeau contenant la barre de recherche -->
     <div class="search container">
       <form class="form-inline">
@@ -90,56 +88,148 @@
       </form>
     </div>
   </header>
-<section class="container">
+  <!-- galerie d'images -->
+  <section class="container">
+    <div class="">
+      <h2>Les places les plus visitées</h2>
+      <p>Découvrez les restaurants, bars et hôtels les mieux notées de la villes!</p>
+
+    </div>
     <div class="card-deck">
       <div class="card">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="img/cozette-dry-bar.jpg" class="card-img-top" alt="devanture du Cozette dry bar ">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        </div>
-        <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
+          <h5 class="card-title">Cozette dry bar</h5>
+          <p class="card-text">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </p>
         </div>
       </div>
       <div class="card">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="img/beaubourg-hotel.jpg" class="card-img-top" alt="devanture de l'hotel BeauBourg">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+          <h5 class="card-title">Hôtel Beaubourg</h5>
+          <p class="card-text">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </p>
         </div>
-        <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
-        </div>
+
       </div>
       <div class="card">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="img/harmony-cafe.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+          <h5 class="card-title">Harmony Café</h5>
+          <p class="card-text">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+          </p>
         </div>
-        <div class="card-footer">
-          <small class="text-muted">Last updated 3 mins ago</small>
+
+      </div>
+    </div>
+<!-- seconde section de la galerie -->
+    <div class="card-deck">
+      <div class="card">
+        <img src="img/chez-nous-bar-à-vins.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Chez nous bar</h5>
+          <p class="card-text">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </p>
         </div>
+
+      </div>
+      <div class="card">
+        <img src="img/MaisonAlbar-Paris-hotel.jpg" class="card-img-top" alt="chambre d'hôtel">
+        <div class="card-body">
+          <h5 class="card-title">Maison Albar</h5>
+          <p class="card-text">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </p>
+        </div>
+
+      </div>
+      <div class="card">
+        <img src="img/kb-cafeshop-paris.jpg" class="card-img-top" alt="intérieur du Kb caféshop">
+        <div class="card-body">
+          <h5 class="card-title">KB caféshop</h5>
+          <p class="card-text">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </p>
+        </div>
+
       </div>
     </div>
   </section>
 
-
   <footer class="container">
-    <div class="website">
+    <div class="row">
+    <div class="website col-md-3">
       <h5>About website</h5>
+      <ul>
+        <li><a class="link" href="#">About Us</a></li>
+        <li><a class="link" href="#">Culture</a></li>
+        <li><a class="link" href="#">Blog</a></li>
+        <li><a class="link" href="#">Career</a></li>
+        <li><a class="link" href="#">Contact</a></li>
+        <li><a class="link" href="#">Security</a></li>
+      </ul>
 
     </div>
-    <div class="foodies">
+    <div class="foodies col-md-3">
       <h5>For foodies</h5>
+      <ul>
+        <li><a href="#">Code of Conduct</a></li>
+        <li><a href="#">Community</a></li>
+        <li><a href="#">Verified users</a></li>
+        <li><a href="#">Blogger Hepl</a></li>
+        <li><a href="#">Developers</a></li>
+        <li><a href="#">Mobile Apps</a></li>
+      </ul>
 
     </div>
-    <div class="restaurant">
+    <div class="restaurant col-md-3">
       <h5>For restaurants</h5>
+      <ul>
+        <li><a href="#">Ad a restaurant</a></li>
+        <li><a href="#">Claim your listing</a></li>
+        <li><a href="#">Business App</a></li>
+        <li><a href="#">Business Owner Guidelines</a></li>
+        <li><a href="#">Business Blog</a></li>
+        <li><a href="#">Restaurant Widgets</a></li>
+      </ul>
+    </div>
+    <div class="other col-md-3">
+      <ul>
+        <li><a href="#">Products of Business</a></li>
+        <li><a href="#">Advertise</a></li>
+        <li><a href="#">Order</a></li>
+        <li><a href="#">Book</a></li>
+        <li><a href="#">Trace</a></li>
+      </ul>
 
     </div>
-
+</div>
   </footer>
 
 
