--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="img/chef.png" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat+Alternates|Roboto:700i&display=swap" rel="stylesheet">
   </head>
 
   <body>
@@ -44,21 +46,21 @@
             <div class="carousel-item active">
               <img src="img/flore.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Cafés</h5>
+                <h1>Cafés</h1>
                 <p>Les cafés mythiques...</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="img/restaurant-bateau-mouche.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Restaurants</h5>
+                <h1>Restaurants</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="img/home-situation.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Hôtels</h5>
+                <h1>Hôtels</h1>
                 <p>Sous les toits de Paris ! </p>
               </div>
             </div>
@@ -73,7 +75,7 @@
           </a>
         </div>
       </div>
-      <!===========================================================================================>
+
         <!-- bandeau contenant la barre de recherche -->
         <div class="navigation row">
           <div class="search container">
@@ -94,7 +96,7 @@
     <section>
       <!--- titre --->
       <div class="bestof container">
-        <div class="">
+        <div class="header">
           <h2 class="text-center">Les places les plus visitées</h2>
           <p class="text-center">Découvrez les restaurants, bars et hôtels les mieux notées de la villes!</p>
         </div>
@@ -113,7 +115,7 @@
             </div>
           </div>
 
-          <div class="card">
+          <div class="card second">
             <img src="img/beaubourg-hotel.jpg" class="card-img-top" alt="devanture de l'hotel BeauBourg">
             <div class="card-body">
               <h5 class="card-title">Hôtel Beaubourg</h5>
@@ -190,47 +192,42 @@
     <footer class="plan_site">
       <div class="foot container ">
         <div class="row">
-          <article class="website text-justify col-md-3">
+          <article class="website d-flex flex-column col-md-3">
             <h5>About website</h5>
-            <ul>
-              <li><a class="link" href="#">About Us</a></li>
-              <li><a class="link" href="#" >Culture</a></li>
-              <li><a class="link" href="#">Blog</a></li>
-              <li><a class="link" href="#">Career</a></li>
-              <li><a class="link" href="#">Contact</a></li>
-              <li><a class="link" href="#">Security</a></li>
-            </ul>
+            <a class="link" href="#">About Us</a>
+            <a class="link" href="#" >Culture</a>
+            <a class="link" href="#">Blog</a>
+            <a class="link" href="#">Career</a>
+            <a class="link" href="#">Contact</a>
+            <a class="link" href="#">Security</a>
           </article>
-          <div class="foodies col-md-3">
+          <div class="foodies d-flex flex-column col-md-3">
             <h5>For foodies</h5>
-            <ul>
-              <li><a href="#">Code of Conduct</a></li>
-              <li><a href="#">Community</a></li>
-              <li><a href="#">Verified users</a></li>
-              <li><a href="#">Blogger Hepl</a></li>
-              <li><a href="#">Developers</a></li>
-              <li><a href="#">Mobile Apps</a></li>
-            </ul>
+
+              <a href="#">Code of Conduct</a>
+              <a href="#">Community</a>
+              <a href="#">Verified users</a>
+              <a href="#">Blogger Hepl</a>
+              <a href="#">Developers</a>
+              <a href="#">Mobile Apps</a>
+
           </div>
-          <div class="restaurant col-md-3">
+          <div class="restaurant d-flex flex-column col-md-3">
             <h5>For restaurants</h5>
-            <ul>
-              <li><a href="#">Ad a restaurant</a></li>
-              <li><a href="#">Claim your listing</a></li>
-              <li><a href="#">Business App</a></li>
-              <li><a href="#">Business Owner Guidelines</a></li>
-              <li><a href="#">Business Blog</a></li>
-              <li><a href="#">Restaurant Widgets</a></li>
-            </ul>
+            <a href="#">Ad a restaurant</a>
+            <a href="#">Claim your listing</a>
+            <a href="#">Business App</a>
+            <a href="#">Business Owner Guidelines</a>
+            <a href="#">Business Blog</a>
+            <a href="#">Restaurant Widgets</a>
           </div>
-          <div class="other col-md-3">
-            <ul>
-              <li><a href="#">Products of Business</a></li>
-              <li><a href="#">Advertise</a></li>
-              <li><a href="#">Order</a></li>
-              <li><a href="#">Book</a></li>
-              <li><a href="#">Trace</a></li>
-            </ul>
+          <div class="other d-flex flex-column col-md-3">
+            <h5></h5>
+            <a href="#">Products of Business</a>
+            <a href="#">Advertise</a>
+            <a href="#">Order</a>
+            <a href="#">Book</a>
+            <a href="#">Trace</a>
           </div>
         </div>
       </div>
@@ -238,7 +235,7 @@
       <div class="end border-top">
         <div class="container">
           <div class="communication d-flex flex-row justify-content-between">
-            <div class="legal_mentions d-flex flex-row">
+            <div class="text-light legal_mentions d-flex flex-row">
               <span class="border-right p-2">
                 <i class="far fa-copyright">Solange Harmoie PICARD tout droit réservé</i>
               </span>
