Ajout des liens vers mes réseaux sociaux :)

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       <!-- Barre de navigation -->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-          <a class="navbar-brand" href="#"><img src="img/chef.png" width="30" height="30" class="d-inline-block align-top" alt="">Foodies</a>
+          <a class="navbar-brand" href="https://solangeharmoniepicard.fr/foodies/"><img src="img/chef.png" width="30" height="30" class="d-inline-block align-top" alt="">Foodies</a>
           <div class="collapse navbar-collapse justify-content-end " id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-item nav-link" href="#">Petits déjeuner</a>
-              <a class="nav-item nav-link" href="#">Déjeuner</a>
-              <a class="nav-item nav-link" href="#">Dîner</a>
-              <a class="nav-item nav-link" href="#">Boire un café</a>
-              <a class="nav-item nav-link" href="#">Une tasse de thé</a>
-              <a class="nav-item nav-link" href="#">More</a>
+              <a class="nav-item nav-link" href="https://solangeharmoniepicard.fr">Petits déjeuner</a>
+              <a class="nav-item nav-link" href="https://github.com/SolangeHarmoniePICARD">Déjeuner</a>
+              <a class="nav-item nav-link" href="https://twitter.com/SolangeHarmonie?lang=fr">Dîner</a>
+              <a class="nav-item nav-link" href="https://framapiaf.org/@SolangeHarmonie">Boire un café</a>
+              <a class="nav-item nav-link" href="https://www.facebook.com/solangeharmonie.picard.5">Une tasse de thé</a>
+              <a class="nav-item nav-link" href="https://www.linkedin.com/in/solange-harmonie-picard/">More</a>
             </div>
           </div>
           <button type="button" class="btn btn-link">Connectez-vous</button>
@@ -195,10 +195,10 @@
           <article class="website d-flex flex-column col-md-3">
             <h5>About website</h5>
             <a class="link" href="#">About Us</a>
-            <a class="link" href="#" >Culture</a>
-            <a class="link" href="#">Blog</a>
-            <a class="link" href="#">Career</a>
-            <a class="link" href="#">Contact</a>
+            <a class="link" href="https://twitter.com/SolangeHarmonie?lang=fr" >Culture</a>
+            <a class="link" href="https://github.com/SolangeHarmoniePICARD">Blog</a>
+            <a class="link" href="https://framapiaf.org/@SolangeHarmonie">Career</a>
+            <a class="link" href="https://www.facebook.com/solangeharmonie.picard.5">Contact</a>
             <a class="link" href="#">Security</a>
           </article>
           <div class="foodies d-flex flex-column col-md-3">
@@ -245,10 +245,10 @@
               <span class="p-2">Plan du site</span>
             </div>
             <div class="social_network">
-              <a href="#"><i class="fab fa-facebook-square p-2"></i></a>
-              <a href="#"><i class="fab fa-twitter p-2"></i></a>
-              <a href="#"><i class="fab fa-youtube p-2"></i></a>
-              <a href="#"><i class="fab fa-instagram p-2"></i></a>
+              <a href="https://www.facebook.com/solangeharmonie.picard.5"><i class="fab fa-facebook-square p-2"></i></a>
+              <a href="https://twitter.com/SolangeHarmonie?lang=fr"><i class="fab fa-twitter p-2"></i></a>
+              <a href="https://github.com/SolangeHarmoniePICARD"><i class="fab fa-github p-2"></i></a>
+              <a href="https://www.linkedin.com/in/solange-harmonie-picard/"><i class="fab fa-linkedin-in p-2"></i></a>
             </div>
           </div>
         </div>
