Réparation du menu burger...

--- a/index.html
+++ b/index.html
@@ -14,26 +14,45 @@
 
   <body>
 
-    <header>
+    <header class="bg-light">
       <!-- Barre de navigation -->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container">
-          <a class="navbar-brand" href="https://solangeharmoniepicard.fr/foodies/"><img src="img/chef.png" width="30" height="30" class="d-inline-block align-top" alt="">Foodies</a>
-          <div class="collapse navbar-collapse justify-content-end " id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <a class="nav-item nav-link" href="https://solangeharmoniepicard.fr">Petits déjeuner</a>
-              <a class="nav-item nav-link" href="https://github.com/SolangeHarmoniePICARD">Déjeuner</a>
-              <a class="nav-item nav-link" href="https://twitter.com/SolangeHarmonie?lang=fr">Dîner</a>
-              <a class="nav-item nav-link" href="https://framapiaf.org/@SolangeHarmonie">Boire un café</a>
-              <a class="nav-item nav-link" href="https://www.facebook.com/solangeharmonie.picard.5">Une tasse de thé</a>
-              <a class="nav-item nav-link" href="https://www.linkedin.com/in/solange-harmonie-picard/">More</a>
-            </div>
+      <div class="container">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="https://solangeharmoniepicard.fr/foodies/">
+            <img src="img/chef.png" width="30" height="30" class="d-inline-block align-top" alt="">Foodies
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end " id="navbarNav">
+            <ul  class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-item nav-link" href="https://solangeharmoniepicard.fr">Petits déjeuner</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-item nav-link" href="https://github.com/SolangeHarmoniePICARD">Déjeuner</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-item nav-link" href="https://twitter.com/SolangeHarmonie?lang=fr">Dîner</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-item nav-link" href="https://framapiaf.org/@SolangeHarmonie">Boire un café</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-item nav-link" href="https://www.facebook.com/solangeharmonie.picard.5">Une tasse de thé</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-item nav-link" href="https://www.linkedin.com/in/solange-harmonie-picard/">More</a>
+              </li>
+              <li class="nav-item">
+            <button type="button" class="btn btn-link">Connectez-vous</button>
+              </li>
+              <li class="nav-item">
+            <button type="button" class="btn btn-light">Rejoignez nous</button>
+            </ul >
           </div>
-          <button type="button" class="btn btn-link">Connectez-vous</button>
-          <button type="button" class="btn btn-light">Rejoignez nous</button>
-        </div>
-      </nav>
-
+        </nav>
+      </div>
       <!-- Slider -->
       <div class="bd-example">
         <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
